# Machine-Learning

./: .gitignore  LICENSE  README.md
Algorithms/K-Means-Clustering/: ChatGPT-01-K-Means-Clustering.ipynb
Basic-Classification/CIFAR-10/: CIFAR-10-CNN-TensorFlow.ipynb  ChatGPT-01.ipynb  Claude25-01.ipynb  Claude25-02.ipynb  README.md
Basic-Classification/Fashion-MNIST/: 01-ChatGPT-Initial.ipynb  02-ChatGPT-Improve-Accuracy.ipynb  03-ChatGPT-Improve-Accuracy-RESNET.ipynb  ChatGPT-05-Confusion-Matrix.ipynb  ChatGPT-06-Colored-Tiles.ipynb  ChatGPT-07-PCA-Visualization.ipynb  ChatGPT04.ipynb  README.md
Basic-Classification/MNIST/: MNIST-Basic-CNN-TensorFlow-Functional-API.ipynb  MNIST-Basic-CNN-TensorFlow.ipynb  MNIST-RESNET-TensorFlow-Functional-API.ipynb  README.md
Basic-Classification/MNIST/ROS2/src/mnist_ros2/: package.xml  setup.cfg  setup.py
Basic-Classification/MNIST/ROS2/src/mnist_ros2/mnist_ros2/: draw_number_node.py  mnist_classifier_node.py  train_mnist.py  webcam_capture_node.py
CUDA/ChatGPT-CUDA_Lessons/: README.md
Genetic-Algorithms/: README.md
Genetic-Algorithms/Linear-Regression/: README.md  linreg.cpp
Regression/Concrete/: Decision-Tree-Regression.ipynb  KNN.ipynb  Linear-Regression.ipynb
Reinforcement-Learning/Aim-Game/: index.html
Reinforcement-Learning/Artillery/: README.md  agent.js  main.js
Reinforcement-Learning/Example1/: 01-ChatGPT-Fail.ipynb  02-ChatGPT-Fail.ipynb  03-ChatGPT-Runs.ipynb  04-ChatGPT-Fail.ipynb
Reinforcement-Learning/Frozen-Lake/: 01-ChatGPT-Fail.ipynb  02-ChatGPT-Fail.ipynb  03.ipynb  README.md
(+116 files in other folders)
